# main-dec

./: README.md  pyproject.toml
main_dec/: __init__.py
tests/: test_main_dec.py
